--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,16 @@ button:hover {
     text-align: center;
 }
 
+.weather-icon {
+    margin: 20px 0;
+}
+
+.weather-icon img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+}
+
 .current-temp {
     font-size: 2.5em;
     font-weight: bold;
